--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=task_management
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -21,7 +21,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
+FILESYSTEM_DRIVER=public
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
